--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "extras.angular.plus",
-  "version": "0.9.3",
+  "version": "0.9.3a",
   "main": ["ngplus-overlay.js"],
   "dependencies": {
     "angular": "^1.2.25"
